# lakeinthelungs

./: .gitattributes  .gitignore  Doxyfile.in  LICENSE  README.rst  export-blender44.py  main.c  meson.build  meson_options.txt
include/lake/: alignment.h  arch.h  atomic.h  bedrock.h  complex.h  defer.h  endian.h  hadal.h  inthelungs.h  inthelungs.slang  log.h  magic.h  moon.h  sanitize.h  simd.h  soma.h  sorceress.h  tagged_heap.h  time.h  types.h  work.h
include/lake/audio/: dsp.h  mixer.h  soma.h  soma_adapter.h  spatial.h  synth.h
include/lake/bedrock/: alignment.h  arch.h  atomic.h  bedrock.h  compiler.h  complex.h  defer.h  drifter.h  endian.h  file_system.h  job_system.h  log.h  machina.h  magic.h  misc.h  module.h  network.h  platforms.h  sanitize.h  simd.h  tagged_heap.h  time.h  truetype.h  types.h  unicode.h  work.h
include/lake/data_structures/: arena.h  arena_allocator.h  balloc.h  bitset.h  block_allocator.h  dagraph.h  darray.h  deque.h  hashmap.h  map.h  mpmc.h  mpmc_ring.h  sparse.h  sparse_set.h  stack.h  stack_allocator.h  strbuf.h  switch.h  switch_list.h
include/lake/devel/: imgui.h  slang.h
include/lake/graphics/: mgpu_renderer.h  pipeline_builder.h  render_graph.h  renderer.h  video.h
include/lake/input/: keycodes.h  scancodes.h
include/lake/math/: bits.h  camera.h  crypto.h  mat2.h  mat3.h  mat4.h  matrix.h  quat.h  quaternion.h  trigonometry.h  vec4.h  vector.h
main/: a_moonlit_walk.c  a_moonlit_walk.h  gameplay.c  gpuexec.c  main.c  main.h  meson.build  prototype.c  rendering.c
main/shaders/: gbuffer.slang
shaders/: imgui.slang  lake.slang
source/: bedrock.c  bedrock_impl.h  bedrock_internal.h  deque.c  drifter.c  frame_time.c  gameplay.c  gpuexec.c  hadal.c  imgui.c  internal.h  job_system.c  log.c  machina.c  main.c  main.h  malloc.c  meson.build  misc.c  moon.c  rendering.c  soma.c  sorceress.c  strbuf.c  tagged_heap.c  temp_backend_stubs.c  vk_command_recorder.c  vk_device.c  vk_drivers.c  vk_moon.h  vk_pipelines.c  vk_render_resources.c  vk_swapchain.c  vk_timeline_sync.c  work.c
source/android/: aaudio.c  meson.build
source/apple/: meson.build
source/asm/: jump_amd64_sysv_elf_gas.s  make_amd64_sysv_elf_gas.s  meson.build
source/audio/: meson.build  pw_soma.c  pw_soma.h
source/bedrock/: bedrock.c  bedrock_impl.h  data_structures.c  drifter.c  frame_time.c  job_system.c  linux_filesystem.c  linux_proc.c  log.c  machina.c  meson.build  network.c  posix_dlfcn.c  posix_mmap.c  posix_threads.c  posix_time.c  temp_backend_stubs.c
source/data_structures/: arena_allocator.c  dagraph.c  darray.c  deque.c  meson.build  mpmc_ring.c  strbuf.c
source/display/: meson.build  wl_hadal.c
source/emscripten/: meson.build
source/graphics/: meson.build  vk_command_recorder.c  vk_device.c  vk_gpu_resources.c  vk_moon.c  vk_moon.h  vk_pipeline.c  vk_swapchain.c  vk_timeline_sync.c
source/linux/: alsa.c  kms.c  linux_proc.c  meson.build  pulseaudio.c  pw_soma.c  pw_soma.h  wl_display.c  wl_hadal.h  wl_vulkan.c  wl_window.c  xcb.c
source/math/: ffsbit.c  mat3.c  mat4.c  matrix.c  meson.build  popcnt.c  quat.c  quaternion.c  trigonometry.c
source/platform/: linux_filesystem.c  linux_proc.c  meson.build  posix_mmap.c  posix_threads.c  wl_hadal.c  wl_hadal.h
source/unix/: jack.c  meson.build  posix_dlfcn.c  posix_mmap.c  posix_threads.c  posix_time.c
source/vulkan/: meson.build  vk_adapter.c  vk_command_recorder.c  vk_device.c  vk_drivers.c  vk_gpu_resources.c  vk_moon.h  vk_pipelines.c  vk_swapchain.c  vk_sync.c  vk_timeline.c  vk_timeline_query.c
source/windows/: meson.build  win32_dll.c  win32_proc.c  win32_threads.c  win32_time.c  win32_valloc.c
subprojects/: .gitignore  cimgui.wrap  directx-headers.wrap  ogg.wrap  spirv-headers.wrap  spirv-tools.wrap  vulkan-headers.wrap  vulkan-memory-allocator.wrap
subprojects/old_wraps/: asiosdk.wrap  freetype.wrap  slang.wrap  vorbis.wrap
subprojects/packagefiles/asiosdk/: iasiothiscallresolver.cpp  iasiothiscallresolver.hpp  meson.build
subprojects/packagefiles/cimgui/: meson.build
subprojects/packagefiles/ogg/src/: meson.build
subprojects/packagefiles/spirv-tools/source/link/: meson.build
subprojects/packagefiles/spirv-tools/source/opt/: meson.build
subprojects/packagefiles/spirv-tools/source/opt/meson-pch/: pch.h
subprojects/packagefiles/vorbis/: meson.build  vorbisenc.def
subprojects/packagefiles/vorbis/lib/: meson.build
subprojects/packagefiles/vulkan-memory-allocator/: meson.build  vk_mem_alloc.cpp
tests/: framework.h  main.c  meson.build  test_framework.c  test_suites.h
tests/audio/: dsp_test.c  mixer_test.c  spatial_test.c  synth_test.c
tests/bedrock/: defer_test.c  drifter_test.c  file_system_test.c  job_system_test.c  machina_test.c  magic_test.c  network_test.c  simd_test.c  tagged_heap_test.c  truetype_test.c
tests/data_structures/: arena_allocator_test.c  arena_test.c  balloc_test.c  bitset_test.c  block_allocator_test.c  dagraph_test.c  darray_test.c  deque_test.c  hashmap_test.c  map_test.c  mpmc_ring_test.c  mpmc_test.c  sparse_set_test.c  sparse_test.c  stack_allocator_test.c  stack_test.c  strbuf_test.c  switch_list_test.c  switch_test.c
tests/graphics/: mgpu_renderer_test.c  pipeline_builder_test.c  render_graph_test.c  renderer_test.c
tests/math/: bits_test.c  camera_test.c  crypto_test.c  mat2_test.c  mat3_test.c  mat4_test.c  matrix_test.c  quat_test.c  quaternion_test.c  simd_test.c  trigonometry_test.c  vec4_test.c  vector_test.c
tests/modules/: hadal_test.c  hadean_test.c  ipomoea_test.c  lovage_test.c  moon_test.c  riven_test.c  soma_test.c  sorceress_test.c  volta_test.c
tests/source/: darray_test.c  defer_test.c  deque_test.c  hadal_impl_test.c  imgui_test.c  moon_impl_test.c  mpmc_ring_test.c  slang_test.c  soma_impl_test.c  strbuf_test.c
tests/source/bedrock/: defer_test.c  drifter_test.c  job_system_test.c  tagged_heap_test.c
tests/source/data_structures/: darray_test.c  deque_test.c  mpmc_ring_test.c  strbuf_test.c
tests/source/devel/: imgui_test.c  slang_test.c
tests/source/math/: bits_test.c
(+52 files in other folders)
